remove hidden menu

--- a/lib/menu/index.html
+++ b/lib/menu/index.html
@@ -7,12 +7,12 @@
             <ion-item class="item item-icon-left" nav-clear menu-close ui-sref="app.home" ui-sref-active="active">
                 <i class="icon ion-home"></i> Home
             </ion-item>
-            <ion-item class="item item-icon-left" nav-clear menu-close ui-sref="app.battery" ui-sref-active="active">
+            <!-- <ion-item class="item item-icon-left" nav-clear menu-close ui-sref="app.battery" ui-sref-active="active">
                 <i class="icon ion-battery-charging"></i> Battery
             </ion-item>
             <ion-item class="item item-icon-left" nav-clear menu-close ui-sref="app.camera" ui-sref-active="active">
                 <i class="icon ion-photo"></i> Camera
-            </ion-item>
+            </ion-item> -->
             <ion-item class="item item-icon-left" nav-clear menu-close ui-sref="app.network" ui-sref-active="active">
                 <i class="icon ion-network"></i> Network
             </ion-item>
